--- a/vercel.json
+++ b/vercel.json
@@ -22,16 +22,8 @@
             "handle": "filesystem"
         },
         {
-            "src": "/assets/(.*)",
-            "dest": "/frontend/dist/assets/$1"
-        },
-        {
-            "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot))",
-            "dest": "/frontend/dist/$1"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/frontend/dist/index.html"
+            "dest": "/frontend/$1"
         }
     ]
 }
